refactor(runtime): modernize dependency management system